--- a/frontend/src/layouts/home/Home.css
+++ b/frontend/src/layouts/home/Home.css
@@ -1,5 +1,5 @@
 .background-wrapper {
-    height: 400px;
+    height: 350px;
     width: 100%;
 }
 
@@ -11,12 +11,51 @@
 }
 
 .card-container {
-    width: 100%;
-    max-width: 600px;
+    width: 80%;
 }
 
-.make-select {
-    background-color: #83888f;
-    border: #83888f;
-    max-width: fit-content;
+.banner-select {
+    background-color: #35373d;
+    color: white;
+    border: #35373d;
+    max-width: 250px;
+}
+
+.banner-select:disabled {
+    background-color: #2a2b31;
+    border: #2a2b31;
+    color: #77777b;
+}
+
+.card-banner {
+    background-color: var(--color-background-dark-contrast);
+}
+
+.form-select {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23ffffff' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
+}
+
+.btn-banner-search {
+    width: 100%;
+    max-width: 250px;
+    background-color: var(--color-main-orange);
+}
+
+.btn-banner-search:hover {
+    background-color: #c25004;
+}
+
+.banner-input {
+    background-color: #35373d;
+    color: white;
+    width: 100%;
+    max-width: 250px;
+    border-radius: 4px;
+    border: none;
+    padding: 0.2rem 0.5rem;
+    font-size: 0.9rem;
+}
+
+.banner-input:focus {
+    outline: none;
 }
