--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -20,4 +22,9 @@ code {
 
 html {
   background-color: var(--color-background-dark);
+}
+
+span, input, button {
+  font-family: "Ubuntu", sans-serif !important; 
+  font-weight: 500 !important;
 }
