bug fix & color adjustments

--- a/frontend/src/layouts/home/components/NavBar/NavBar.css
+++ b/frontend/src/layouts/home/components/NavBar/NavBar.css
@@ -7,6 +7,10 @@
 }
 
 .btn-primary {
-    background-color: #061761;
+    background-color: var(--color-main-orange);
     border: none;
+}
+
+.btn-primary:hover {
+    background-color: #c25004;
 }
