--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,7 +24,11 @@ html {
   background-color: var(--color-background-dark);
 }
 
-span, input, button, a, h1, h2, h3 {
+* {
   font-family: "Ubuntu", sans-serif !important; 
   font-weight: 500 !important;
+}
+
+p {
+  font-weight: 300 !important;
 }
