--- a/frontend/src/layouts/home/components/Recommendations/Recommendations.css
+++ b/frontend/src/layouts/home/components/Recommendations/Recommendations.css
@@ -1,6 +1,7 @@
 .recommendations-container {
     background-color: var(--color-background-dark-contrast);
     margin-top: 10em;
+    margin-bottom: 3em;
 }
 
 .recommendations-container a {
@@ -9,7 +10,8 @@
 }
 
 .card-recommendation {
-    width: 24rem;
+    width: 100%; /* Full width on small screens */
+    height: auto;
     border: none;
     background-color: #35373d;
 }
@@ -29,4 +31,42 @@
 
 .card-price > span {
     font-size: 0.8rem;
+}
+
+@media (max-width: 992px) {
+    .recommendations-container {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .recommendations-header h2 {
+        font-size: 1.1rem;
+    }
+
+    .recommendations-header a span {
+        font-size: 1rem;
+    }
+
+    .recommendations-header i {
+        font-size: 1.1rem;
+    }
+
+    @media (max-width: 992px) {
+        .card-recommendation h5 {
+            font-size: 1.1rem;
+        }
+    }
+}
+
+@media (min-width: 760px) {
+    .card-recommendation {
+        width: calc(50% - 15px);
+    }
+}
+
+@media (min-width: 992px) {
+    .card-recommendation {
+        width: 24rem;
+        height: 24rem;
+    }
 }
