--- a/frontend/src/layouts/home/components/Recommendations/Recommendations.css
+++ b/frontend/src/layouts/home/components/Recommendations/Recommendations.css
@@ -10,7 +10,7 @@
 }
 
 .card-recommendation {
-    width: 100%; /* Full width on small screens */
+    width: 100%;
     height: auto;
     border: none;
     background-color: #35373d;
