--- a/frontend/src/layouts/carDetails/components/KeyDetails/KeyDetails.css
+++ b/frontend/src/layouts/carDetails/components/KeyDetails/KeyDetails.css
@@ -7,3 +7,8 @@
 .car-key-details-container p, .car-key-details-container span {
     color: white;
 }
+
+.add-to-favorites {
+    cursor: pointer;
+    text-decoration: none;
+}
