--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -41,3 +41,13 @@ a {
 .back-home {
   text-decoration: none;
 }
+
+input[type=checkbox]:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+input[type=checkbox]:checked {
+  outline: none;
+  box-shadow: none;
+}
