--- a/frontend/src/layouts/utils/components/Pagination/Pagination.css
+++ b/frontend/src/layouts/utils/components/Pagination/Pagination.css
@@ -9,3 +9,10 @@
     border-radius: 5px;
     cursor: pointer;
 }
+
+.page_numbers.active {
+    background-color: white;
+    color: var(--color-main-orange);
+    font-weight: bold;
+    border: 1px solid var(--color-main-orange);
+}
