Dynamic data profile information and active listings

--- a/frontend/src/layouts/utils/components/CarCardsList/CarCardsList.css
+++ b/frontend/src/layouts/utils/components/CarCardsList/CarCardsList.css
@@ -1,6 +1,9 @@
-.remove-favorite-container {
+.remove-favorite-button {
     background-color: red;
+    border: none;
     border-radius: 5px;
+    height: 100%;
+    width: 100%;
 }
 
 .car-cards-list {
