--- a/frontend/src/layouts/carForm/CarForm.css
+++ b/frontend/src/layouts/carForm/CarForm.css
@@ -27,8 +27,22 @@
     background-color: #35373d;
     color: white;
     border: none;
-    padding: 8px 15px;
-    border-radius: 4px;
+    padding: 5px 15px;
+    border-radius: 5px;
     font-size: 16px;
     cursor: pointer;
+}
+
+#form-description {
+    background-color: #35373d;
+    border-radius: 5px;
+    border: none;
+    resize: none;
+    height: 400px;
+    font-weight: 300 !important;
+}
+
+#form-description:focus {
+    outline: none;
+    box-shadow: none;
 }
