--- a/frontend/src/layouts/utils/components/CarCardsList/CarCardsList.css
+++ b/frontend/src/layouts/utils/components/CarCardsList/CarCardsList.css
@@ -6,6 +6,14 @@
     width: 100%;
 }
 
+.edit-listing-button {
+    background-color: var(--color-main-orange);
+    border: none;
+    border-radius: 5px;
+    height: 100%;
+    width: 100%;
+}
+
 .car-cards-list {
     row-gap: 20px;
 }
